applications/platform/spire/spire-server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spire-ingress
  namespace: spire
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - spire-oidc.happylittlecloud.ca
    secretName: keycloak-tls
  rules:
  - host: spire-oidc.happylittlecloud.ca
    http:
      paths:
      - path: /.well-known/openid-configuration
        backend:
          serviceName: spire-oidc
          servicePort: 80
      - path: /keys
        backend:
          serviceName: spire-oidc
          servicePort: 80
